# libitc

./: Itc_Id.c  README.md  meson.build  meson.options
.github/: release.yaml
.github/workflows/: build-and-run-tests.yml  release.yaml  report-test-results.yml  test.yml
include/: Itc_Id.h  Itc_Id_package.h  Itc_Id_prototypes.h  Itc_Status.h  Itc_config.h
libitc/: ITC_Event.c  ITC_Event_private.h  ITC_Id.c  ITC_Id_package.h  ITC_Id_private.h  ITC_Port.c  ITC_Port_private.h  ITC_SerDes.c  ITC_SerDes_Util.c  ITC_SerDes_private.h  ITC_Stamp.c  ITC_package.h  meson.build
libitc/config/: meson.build
libitc/include/: ITC.h  ITC_Event.h  ITC_Event_prototypes.h  ITC_Id.h  ITC_Id_package.h  ITC_Id_prototypes.h  ITC_Port.h  ITC_SerDes.h  ITC_Stamp.h  ITC_Stamp_prototypes.h  ITC_Status.h  ITC_config.h
libitc/package-include/: ITC_Event_package.h  ITC_Id_package.h  ITC_SerDes_Util_package.h  ITC_SerDes_package.h
libitc/test/: ITC_Event_Test.c  ITC_Id_Test.c  ITC_Stamp_Test.c  ITC_TestUtil.c  meson.build
libitc/test/config/: config.yaml  meson.build
libitc/test/config/normal/: meson.build
libitc/test/include/: ITC_Event_Test_package.h  ITC_Event_Test_private.h  ITC_Id_Test_package.h  ITC_Id_Test_private.h  ITC_SerDes_Test_package.h  ITC_TestUtil.h  ITC_Test_helpers.h  ITC_Test_package.h
libitc/test/mocked/: ITC_Event_Test.c  ITC_Id_Test.c  meson.build
libitc/test/normal/: ITC_Event_Test.c  ITC_Id_Test.c  ITC_SerDes_Test.c  ITC_Stamp_Test.c  meson.build
tests/: ITC_TestUtil.c  meson.build
tests/include/: ITC_TestUtil.h  ITC_Test_package.h
tests/mocked/: ITC_Event_Test.c  ITC_Id_Test.c
tests/normal/: ITC_Event_Test.c  ITC_Id_Test.c  ITC_SerDes_Test.c  ITC_Stamp_Test.c
